fix: update avatar
