# app/http/requests/update_option.go
@@ -1,15 +1,17 @@
 package requests
 
 import (
+	"mime/multipart"
+
 	"github.com/goravel/framework/contracts/http"
 	"github.com/goravel/framework/contracts/validation"
 )
 
 type UpdateOption struct {
-	Name   string `json:"name"`
-	Desc   string `json:"desc"`
-	Avatar string `json:"avatar"`
-	PollID string `json:"poll_id"`
+	Name   string               `json:"name" form:"name"`
+	Desc   string               `json:"desc" form:"desc"`
+	Avatar multipart.FileHeader `json:"avatar" form:"avatar" swaggerignore:"true"`
+	PollID string               `json:"poll_id" form:"poll_id"`
 }
 
 func (r *UpdateOption) Authorize(ctx http.Context) error {
@@ -24,8 +26,8 @@ func (r *UpdateOption) Rules(ctx http.Context) map[string]string {
 	return map[string]string{
 		"name":    "string",
 		"desc":    "string",
-		"avatar":  "string",
-		"poll_id": "required|string",
+		"avatar":  "file|image",
+		"poll_id": "string",
 	}
 }
 
