# docs/swagger.json
@@ -248,13 +248,25 @@
                         "required": true
                     },
                     {
-                        "description": "Option data",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.UpdateOption"
-                        }
+                        "type": "string",
+                        "name": "desc",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "poll_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Option avatar",
+                        "name": "avatar",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1076,23 +1088,6 @@
                     ]
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "requests.UpdateOption": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "desc": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "poll_id": {
                     "type": "string"
                 }
             }
